classDiagram
class User {
    + String Email
    + String Name
    + UUID4 id
    - String Password
    + DateTime created_at
    + DateTime updated_at
    +edit_user()
    +delete_user()
    +void login()
    +void logout ()
    +create_place()
}

class Review {
    + UUID4 id
    + String content
    + int rating
    + DateTime created_at
    + DateTime updated_at
    + Float rating
    +void editReview(String content)
}

class Place {
    + UUID4 id
    - UUID4 owner id
    + String name
    + String description
    + String location
    + Float price
    + List amenity
    + List review
    + DateTime created_at
    + DateTime updated_at
    +void addReview(Review)
    +void removeReview(Review)
    +update_place()
}

class Amenity {
    + UUID4 id
    + String name
    + DateTime created_at
    + DateTime updated_at
    +void addAmenity(Place)
    +void edit_amenity()
    +void delete_amenity()
}

Place o-- Amenity : Contains
Place --> Review : Receives
User --> Review : Writes
User --> Place : Owner
